# ConflictPhysics

./: .gitignore  CMakeLists.txt  README.md  conflict_physics.c  conflict_physics.h  imphysics.c  imphysics.h
example/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  main.c
